services/elkstackplus/01.elktest.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: elktest
spec: {}
status: {}
