services/elkstackplus/03.elasticsearch-master.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-master
  labels:
    app: elasticsearch-master
spec:
  ports:
  - 
    port: 9200
    name: rest
  - 
    port: 9300
    name: transport
  clusterIP: None
  selector:
    app: elasticsearch-master
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: elasticsearch-master
spec:
  selector:
    matchLabels:
      app: elasticsearch-master # has to match .spec.template.metadata.labels
  serviceName: "elasticsearch-master"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: elasticsearch-master # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 1000
      containers:
      - name: elasticsearch-master
        image: pblaas/elasticsearch:6.1.2
        args: [ "-E", "cluster.name=$(cluster.name)", "-E", "node.data=false", "-E", "node.master=true", "-E", "node.name=$(MY_POD_NAME)" ]
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
          name: rest
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: es-lib
          mountPath: /var/lib/elasticsearch
        - name: es-log
          mountPath: /var/log/elasticsearch
  volumeClaimTemplates:
  - metadata:
      name: es-lib
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gold
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: es-log
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gold
      resources:
        requests:
          storage: 2Gi
