services/elkstackplus/07.cerebro.deploy.yaml
apiVersion: v1
kind: Service
metadata: 
  name: cerebro
spec: 
  type: ClusterIP
  selector: 
    app: cerebro
  ports: 
    - 
      name: http-9000
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cerebro
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cerebro
    spec:
      containers:
      - name: cerebro
        image: yannart/cerebro:latest
        ports:
        - containerPort: 9000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 2000Mi
          requests:
            cpu: 100m
            memory: 500Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: cerebro
spec:
 rules:
   - host: cerebro.xxxx.nip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: cerebro
             servicePort: 9000
