services/elkstackplus/08.kibana.deploy.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kibana
spec: 
  type: ClusterIP
  selector: 
    app: kibana
  ports: 
    - 
      name: http-5601
      port: 5601
      targetPort: 5601
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: pblaas/kibana:6.1.2
        ports:
        - containerPort: 5601
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 2000m
            memory: 2500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kibana
spec:
 rules:
   - host: kibana.xxxx.nip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: kibana
             servicePort: 5601
